<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_Event" Id="{cccd9578-26f7-41c7-b608-5e5bbf010756}">
    <Declaration><![CDATA[TYPE ST_Event :
STRUCT
	eEventType : E_EventType;
	eEventSeverity : TcEventSeverity;
	nEventIdentity : UDINT;
	sEventText : STRING(255);
	dtTimestamp : DATE_AND_TIME;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>